<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="toast">Toast</string>
    <string name="count">Count</string>
    <string name="random">Random</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello World!!</string>
    <string name="zero_string">0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="second_fragment_heading">Generating a random number between 0 and %d</string>

</resources>